# fox-neovim-config

./: .gitignore  .gp.md  .luarc.json  :q  autocmds.lua  init.lua  lua51.yml  neovim.yml  nvim-session-manager.lua  selene.toml
.config/nvim/: .editorconfig  .luarc.json  pyproject.toml
.config/nvim/lua/: fox-neovim-config.lua
.config/nvim/lua/fox-neovim-config/: autocmds.lua  init.lua  keymaps.lua  lazy.lua  settings.lua
.config/nvim/lua/fox-neovim-config/plugins/: Session.vim  avante.lua  blink-cmp.lua  chatgpt.lua  clangd_extensions.lua  compiler.lua  conform.lua  dashboard.lua  diffview.lua  fidget.lua  flow.lua  fzf-lua.lua  git-conflict.lua  gitsigns.lua  harpoon.lua  helpview.lua  image-nvim.lua  indent-blankline.lua  jupytext.lua  lazydev.lua  lazygit.lua  leetcode.lua  live-command.lua  log-highlight.lua  lsp-colors.lua  lsp-lens.lua  lsp_signature.lua  lspkind.lua  lualine.lua  luasnip.lua  magma-nvim.lua  mason-lspconfig.lua  mason.lua  neogen.lua  neovim-project.lua  nerdy.lua  noice.lua  nvim-autopairs.lua  nvim-colorizer.lua  nvim-dap-python.lua  (+28 more)
.config/nvim/lua/fox-neovim-config/plugins/_disabled/: abc.lua  catppuccin.lua  chatgpt.lua  cmake-tools.lua  cmp-ai.lua  cmp-luasnip-choice.lua  cmp-plugins.lua  code-companion.lua  codeium.lua  compiler.lua  dashboard.lua  diagnosticls-configs-nvim.lua  diagram.lua  gp.lua  harpoon.lua  indent-blankline.lua  jupytext.lua  leetcode.lua  lsp-colors.lua  lsp-lens.lua  lsp_signature.lua  markdown-preview-nvim-bkp.lua  meowboard.lua  nvim-cmp.lua  nvim-dap-ui.lua  nvim-dap.lua  nvim-jenkinsfile-linter.lua  (+11 more)
(+113 files in other folders)
