[tool.poetry]
name = "neovim-venv"
version = "1.0.0"
description = "Python virtual environment for neovim"
authors = ["gklodfox"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neovim = "^0.3.1"
pynvim = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
